--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -578,7 +578,8 @@ section {
 .hero-animated {
   width: 100%;
   min-height: 50vh;
-  background: url("../img/hero-bg.png") center center;
+  background: url("../img/splash.jpg") center center;
+  /* filter:brightness(40%); */
   background-size: cover;
   position: relative;
   padding: 120px 0 60px;
