--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1388,7 +1388,7 @@ section {
 
 .onfocus .video-play {
   min-height: 400px;
-  background: linear-gradient(rgba(var(--color-black-rgb), 0.4), rgba(var(--color-black-rgb), 0.7)), url("../img/onfocus-video-bg.jpg") center center;
+  background: linear-gradient(rgba(var(--color-black-rgb), 0.4), rgba(var(--color-black-rgb), 0.7)), url("../img/on-focus.png") center center;
   background-size: cover;
 }
 
@@ -2157,7 +2157,7 @@ section {
 # Team Section
 --------------------------------------------------------------*/
 .team .team-member .member-img {
-  border-radius: 8px;
+  border-radius: 100px;
   overflow: hidden;
 }
 
